fix spacing issue with bottom of welcome center

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -873,6 +873,7 @@ $kpi-text-color: #888;
   SOCIAL MEDIA SECTION
   */
   .social-media-section {
+    min-height: 180px;
     padding-top: 50px;
     padding-bottom: 30px;
     background-color: #333;
